set background size for team's background curve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1124,6 +1124,7 @@ section {
 --------------------------------------------------------------*/
 .team {
   background: url("../img/faq_top_bg.jpg")  bottom center no-repeat;
+  background-size: 100%;
 }
 .team .member {
   position: relative;
