--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1275,7 +1275,7 @@ section {
 }
 .faq .faq-list p {
   margin-bottom: 0;
-  padding: 25px 0 0 0;
+  padding: 0 0 0 0;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -1283,6 +1283,9 @@ section {
   text-transform: capitalize;
   color: #161616;
   opacity: 0.7;
+}
+.faq .faq-list p:first-child {
+  margin-top: 25px;
 }
 .faq .faq-list .icon-show {
   display: none;
